--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -8,9 +8,9 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: hoi12
 month: 0
-firstpage: 0
-lastpage: 0
-page: 0-0
+firstpage: i
+lastpage: xvii
+page: i-xvii
 sections: 
 author:
 - given: Steven C.H.
